syntax = "proto3";

// 命 令 号: 1008
// 命令名称: lcd_inner_pic
// 命令描述: 显示内置图片
// 文件名称: d1bc1008_lcd_inner_pic.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbLcdInnerPic";

message LcdInnerPicRequest {
  // ATTR: REQUSET
  uint32 index = 1;    //显示的图标序号
  uint32 post_x = 2;   //左上角 X坐标位
  uint32 post_y = 3;   //左上角 y坐标位
}

message LcdInnerPicResponse {

}
